<layout>

    <data>

        <variable
            name="repository"
            type="com.groundzero.github.feature.search.data.Repository" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".feature.repository.RepositoryFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/repository_title"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            android:text="@{repository.name}"
            android:textColor="@color/black"
            android:textSize="@dimen/highlighted_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/repository_user"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            android:text="@{repository.fullName}"
            android:textColor="@color/black"
            android:textSize="@dimen/highlighted_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/repository_description"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            android:text="@{repository.description}"
            android:textColor="@color/black"
            android:textSize="@dimen/highlighted_text" />

        <Button
            android:id="@+id/repository_more_owner"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/normal_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/minimal_padding"
            android:text="@string/repository_more_on_owner" />

        <Button
            android:id="@+id/repository_external_url"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            android:text="@string/repository_inspect_in_browser" />
    </LinearLayout>
</layout>